# wbsir

./: LICENSE  initdb.sql  pyproject.toml
src/wbsir/: __init__.py  config.py  db.py  download.py  main.py  ocr.py  populate_db.py
