[project]
name = "wbsir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayandip Dutta", email = "sayandip199309@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "pandas[xml]>=2.3.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251219",
]
